# litellm-vector-store-mcp

./: .dockerignore  .env.example  .env.proxy-example  .gitignore  .mcp.json.example  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  TEAM_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup.py  test_config.py  test_multi_store.py
docs/: CLAUDE_CODE_SETUP.md  DOCKER_DEPLOYMENT.md  GCP_REGISTRY_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  MULTI_PLATFORM_SUPPORT.md  MULTI_STORE_USAGE.md  MULTI_VECTOR_STORE_SUPPORT.md  README.md  SECURITY_COMPARISON.md  SESSION_SUMMARY.md  USAGE_EXAMPLES.md
